<resources>
    <string name="more_apps">More Apps</string>
    <string name="tap_to_view_more">Tap to View More Apps</string>
    <string name="apps">Apps</string>
    <string name="app_name_QuranVocabulary">Quran Vocabulary</string>
    <string name="app_name_TajweedQuran">Tajweed Quran</string>
    <string name="tajweedNotificatn">Quran Tajweed Notification</string>
    <string name="vocabularyNotificatn">Quran Vocabulary Notification</string>
    <string name="suraKahfNotificatn">Surah Kahf Notification</string>
    <string name="quranFactsNotification">Quran Facts Notification</string>
    <string name="labelQuranVocabulary">Quran Vocabulary Language</string>
    <string name="labelTajweedQuran">Tajweed Language</string>
    <string name="setUrdu">Urdu</string>
    <string name="setEnglish">English</string>
    <string name="word_tab_txt">Word By Word</string>
    <string name="full_tab_dua">Full Dua</string>
    <string name="full_tab_sura">Full Surah</string>
    <string name="Quranvocabulary_audioSize">4.214976E7</string>
    <string name="TajweedQuran_audioSize">2.119104E7</string>
    <string name="WBW_audioSize">4.2137472E7</string>
    <string name="xlistview_header_hint_normal">Pull down to Go to Previous Surah</string>
    <string name="xlistview_header_hint_ready">Release to Go to Previous Surah</string>
    <string name="xlistview_header_hint_loading">loading...</string>
    <string name="xlistview_header_last_time"></string>
    <string name="xlistview_footer_hint_normal">Pull up to Go to Next Surah</string>
    <string name="xlistview_footer_hint_ready">Release to Go to Next Surah</string>
    <string name="xlistview_footer_hint_last_surah">Last Surah</string>
    <string name="juzHeader">Juz</string>
    <string name="surahHeader">Surah</string>
    <string-array name="more_apps_category">
        <item>Kids</item>
        <item>Adults</item>
        <item>General</item>
    </string-array>
    <string-array name="eng_urdu">
        <item>Urdu</item>
        <item>English</item>

    </string-array>
    <string-array name="on_off">
        <item>On</item>
        <item>Off</item>
    </string-array>
    <string-array name="scietific_facts_list">
        <item>The Creation of Life</item>
        <item>The Presence of Iron</item>
        <item>Sky as Protector</item>
        <item>Function of Mountains</item>
        <item>Earth - Egg Shaped</item>
        <item>Atoms</item>
        <item>Pain Receptors in Skin</item>
        <item>Wormholes</item>
        <item>Pulsars and Black Holes</item>
        <item>Expansion of Universe</item>
        <item>Orbits</item>
        <item>Origin of the Universe</item>
        <item>Sex of baby</item>
        <item>The Quran on the Cerebrum</item>
        <item>The Movement of Mountains</item>
        <item>The Relativity of Time</item>
        <item>The Quran on Seas and Rivers</item>
        <item>The Quran on Deep Seas and Internal Waves</item>
        <item>The Quran on Clouds</item>
        <item>The Proportion of Rain</item>
        <item>The Quran on Human Embryonic Development</item>
        <item>The Identity in the Fingerprint</item>
        <item>The Victory Of The Romans And The Lowest Point On Earth</item>
        <item>The Formation Of Petrol</item>
        <item>Creation From Clay</item>

    </string-array>
    <string-array name="interesting_facts_list">
        <item>Parts</item>
        <item>Chapters</item>
        <item>Bismillah</item>
        <item>Al Taubah</item>
        <item>Al Naml</item>
        <item>Longest Surah</item>
        <item>Smallest Surah</item>
        <item>Rewards of Reciting Quran</item>
        <item>Longest Verse</item>
        <item>Greatest Verse</item>
        <item>Other Names Of Quran</item>
        <item>Age Of Prophet (PBUH) at Revealation</item>
        <item>Duration of Revelation</item>
        <item>First Revelation</item>
        <item>Best Drink</item>
        <item>Best Food</item>
        <item>Best Month</item>
        <item>Best Night</item>
        <item>Mention of Pharaoh</item>
        <item>Heart Of Quran</item>
        <item>Laws Of Marriage</item>
        <item>Quran Reading in Ramadan</item>
        <item>Judgment Day</item>
        <item>Word \‘Allah\’</item>
        <item>Chapters Named After Prophets</item>
        <item>25 Prophets</item>
        <item>Mosques in Quran</item>
        <item>Angels in Quran</item>
        <item>Theme of Quran</item>
        <item>Difficulty in Recitation</item>
        <item>Charity</item>
    </string-array>
    <string name="parts">There are 30 Paara or Juz (parts) in The Holy Quran.</string>
    <string name="chapters">There are 114 Surahs (chapters) in The Holy Quran.</string>
    <string name="bismillah_fact"><![CDATA[<b>Bismillah Al-Rahman Al-Raheem</b> is repeated <b>114</b> times in the Quran.]]></string>
    <string name="twabah"><![CDATA[All except for Surah &quot;<b>Al Taubah&quot</b> start with <b>Bismillah Al-Rahman Al-Raheem</b>.]]></string>
    <string name="naml"><![CDATA[Bismillah is repeated twice in Surah Al-Naml (Chapter 27). One in the beginning (Verse 1) and other in the middle (Verse 30).]]></string>
    <string name="longest_surah"><![CDATA[Surah Al-Baqarah (Chapter 2) is the longest Surah in The Holy Quran. It has 286 verses.]]></string>
    <string name="smallest_surah"><![CDATA[Surah Al-Kausar (chapter 108) is the smallest Surah in The Holy Quran. It comprises of 3 verses only.]]></string>
    <string name="rewards_of_quran"><![CDATA[The Quran has more than 300,000 letters. Therefore, whoever reads the Quran will get a reward of more than 3 million good deeds because a person who reads one letter of the Quran gets ten rewards.]]></string>
    <string name="longest_verse"><![CDATA[The longest verse in the Quran is verse 282 in Surah Al-Baqarah, popularly known as the verse of debt.]]></string>
    <string name="greatest_verse"><![CDATA[The greatest verse in the Quran is <b>Aayah-tul-Kursi (Verse of the Throne)</b> which is verse 255 in Surah Al-Baqarah (Chapter 2).]]></string>
    <string name="other_names_quran"><![CDATA[The Quran is known by various names: <ul>
        <li>Furqaan (Criterion, as stated in Quran (25: 1))</li></br>
        <li>Tanzil (Sent down, as mentioned Quran (26: 192))</li></br>
        <li>Dhikr (Reminder, refer to Quran (15: 9))</li></br>
        <li>Kitab (Scripture, as indicated in Quran (21:10))</li>]]></string>
    <string name="age_of_prophet"><![CDATA[Prophet Muhammad (Sallallahu Alaihi Wasallam) was 40 Years old when Quran was first revealed to him through Jibraeel (Alaihis-salaam)]]></string>
    <string name="duration_revelation"><![CDATA[Prophet Muhammad (Sallallahu Alaihi Wasallam) received the revelation of the Quran in Makkah for 13 Years and in Madinah for 10 Years. The revelation was completed in 23 years.]]></string>
    <string name="first_revelation"><![CDATA[The first verse to be revealed were the first few verses of Surah Al-Alaq (Chapter 96). Prophet Muhammad (Sallallahu Alaihi Wasallam) received the first revelation in the cave of Hira (Makkah)]]></string>
    <string name="best_drink"><![CDATA[<b>Milk</b> is the <b>best drink</b> mentioned in the Quran.<b>(Quran 16:66)</b>]]></string>
    <string name="best_food"><![CDATA[<b>Honey</b> is the <b>best food</b> mentioned in the Quran. <b>(Quran 16:69)</b>]]></string>
    <string name="best_month"><![CDATA[<b>Ramadan</b> is the <b>best month</b> mentioned in the Quran <b>(Quran 2:183)</b>]]></string>
    <string name="best_night"><![CDATA[The best night mentioned in Quran is the <b>Night of Power</b> in Ramadan <b>(Laylat al Qadr) [Quran 97:1-5; 44:3-6]</b>]]></string>
    <string name="mention_of_pharaoh"><![CDATA[Allah has said in the Qur\'an that Fir\'aun\'s (Pharaoh) body is kept as an admonishing example for future generations to come. <b>(Quran 10: 91-92)</b>]]></string>
    <string name="heart_of_quran"><![CDATA[<b>Surah Yaseen (Chapter 36)</b> is the HEART of the Quran <b>(Al-Tirmidhi, 2887)</b>]]></string>
    <string name="law_marriages"><![CDATA[<b>Surah Al-Nissa (The Women), Chapter 4</b> speaks about laws of <b>marriage</b>]]></string>
    <string name="reading_ramdhan"><![CDATA[Reading <b>1 verse</b> in Ramadan is equal to reading the entire Quran in other months]]></string>
    <string name="judgment"><![CDATA[The Quran will <b>intercede</b> for people who recited it on <b>Judgment Day</b> and it will <b>complain</b> of people who didn\'t recite it.]]></string>
    <string name="word_Allah"><![CDATA[The word &apos;Allah&apos; has been repeated 2698 times in the Quran.]]></string>
    <string name="chapters_names_after"><![CDATA[5 Surahs or Chapters in Quran are named after Prophets who came before Prophet Muhammad (PBUH)<ul>
      <li>Surah Al-Yunus (chapter 10)</li>
        <li>Surah Al-Hood (chapter 11)</li>
        <li>Surah Al-Yusuf (chapter 12)</li>
        <li>Surah Al-Ibraheem (chapter 14)<\li>
        <li>Surah Al-Nuh (chapter 71)</li>
        </ul>
   ]]></string>
    <string name="_25_prophets"><![CDATA[<i>25</i> Prophets are mentioned in the Quran.<ol>
    <li>Adam</li>
    <li>Ayub</li>
    <li>Dawud </li>
    <li>Dhul-Kifl</li>
    <li>Harun</li>
    <li>Hud</li>
    <li>Ibrahim</li>
    <li>Idris</li>
    <li>Ilyas</li>
    <li>Al Yasa</li>
    <li>Isa (Jesus)</li>
    <li>Ishaq </li>
    <li>Ismail</li>
    <li>Lut</li>
    <li>Muhammad</li>
    <li>Musa (Moses)</li>
    <li>Nuh</li>
    <li>Saleh</li>
    <li>Shu\'ayb </li>
    <li>Sulayman</li>
    <li>Yahya </li>
    <li>Yusuf</li>
    <li>Ya\'qub</li>
    <li>Yunus</li>
    <li>Zakariyya</li>
    </ol>]]></string>
    <string name="mosques"><![CDATA[There are 5 mosques that are mentioned in the Quran
    <ul>
      <li>Surah Al-Yunus (chapter 10)</li>
        <li>Surah Al-Hood (chapter 11)</li>
        <li>Surah Al-Yusuf (chapter 12)</li>
        <li>Surah Al-Ibraheem (chapter 14)<\li>
        <li>Surah Al-Nuh (chapter 71)</li>
        </ul>]]></string>
<string name="angles"><![CDATA[There are 5 angles that are mentioned in the Quran
    <ul>
      <li>Jibraeel (Alaihis salaam) [2:98] (chapter 10)</li>
        <li>Meekaeel (Alaihis salaam) [2:98]</li>
        <li>Haroot (Alaihis salaam) [2:102]</li>
        <li>Maroot (Alaihis salaam) [2:102]<\li>
        <li>Maalik (Alaihis salaam) [43:77]</li>
        </ul>]]></string>
    <string name="theme"><![CDATA[The major theme of the Quran is Tawheed (Oneness of Allah). It teaches us that those who worshipped Allah alone sincerely were successful in this world and will attain salvation in the Hereafter, while those who have no Tawheed in their lives are doomed in the hereafter.]]></string>
    <string name="_difficulity_recitation">One who recites the Quran and experiences difficulty in doing so will get double the reward.</string>
    <string name="charity">The Quran orders those who are capable to give charity. One of the best forms of charity is that which is given to a relative, because it consists of two things; charity and strengthening of family ties.</string>
    <string name="admob_id">ca-app-pub-6471360733987211/8411830043</string>
    <string name="txt_settings">Settings</string>
    <string name="txt_contnt_descrptn">Image</string>
    <string name="txt_ok">Ok</string>
    <string name="txt_cancel">Cancel</string>
    <string name="reset">Reset</string>
    <string name="txt_reset">Do you want to apply the default settings?</string>
</resources>