<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/dialog_width"
    android:layout_height="wrap_content"
    android:background="@drawable/download_dialog_bg"
    android:orientation="vertical"
    android:splitMotionEvents="false" >

    <TextView
        android:id="@+id/tv_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_fourty_five"
        android:layout_alignParentTop="true"
        android:background="@drawable/goto_header_bg"
        android:gravity="center"
        android:text="@string/reset"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_thirty" />

    <LinearLayout
        android:id="@+id/text_Layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_header"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/size_five" >

        <TextView
            android:id="@+id/tv_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size_twelve"
            android:layout_marginTop="@dimen/size_fifteen"
            android:gravity="center"
            android:padding="@dimen/size_five"
            android:text="@string/txt_reset"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_twenty" />

        <LinearLayout
            android:id="@+id/btn_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_fourty"
            android:layout_marginBottom="@dimen/size_eight"
            android:layout_marginLeft="@dimen/size_five"
            android:layout_marginRight="@dimen/size_five"
            android:orientation="horizontal"
            android:splitMotionEvents="false" >

            <Button
                android:id="@+id/reset"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/size_eight"
                android:layout_marginRight="@dimen/size_five"
                android:layout_weight="1"
                android:background="@drawable/btn_download_dialog"
                android:onClick="onResetClick"
                android:text="@string/txt_ok"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_eighteen" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/size_five"
                android:layout_marginRight="@dimen/size_eight"
                android:layout_weight="1"
                android:background="@drawable/btn_download_dialog"
                android:onClick="onCancelClick"
                android:text="@string/txt_cancel"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_eighteen" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>